--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,8 +38,22 @@ deploy:
   image: google/cloud-sdk
   services:
     - docker:dind
+  rules:
+    if: 'CI_COMMIT_BRANCH == "staging"'
+      environment:
+        name: staging
+        url: https://strapi-staging-5tz4r7de4a-uc.a.run.app
+      variables:
+        ENVIRONMENT: $CI_ENVIRONMENT_NAME
+    if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH'
+      environment:
+        name: production
+        url: https://strapi-production-5tz4r7de4a-uc.a.run.app
+      variables:
+        ENVIRONMENT: $CI_ENVIRONMENT_NAME
   script:
+    - echo "Deplyoing to staging server"
     - echo $GCP_SERVICE_KEY > gcloud-service-key.json 
     - gcloud auth activate-service-account --key-file gcloud-service-key.json
     - gcloud config set project $GCP_PROJECT_ID
-    - gcloud builds submit . --config=cloudbuild.yaml
+    - gcloud builds submit . --config=cloudbuild.yaml --substitutions=_ENVIRONMENT=$ENVIRONMENT
