--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,10 +39,10 @@ deploy:
   services:
     - docker:dind
   rules:
-    if: 'CI_COMMIT_BRANCH == "staging"'
+    - if: 'CI_COMMIT_BRANCH == "staging"'
       variables:
         _ENV: $CI_ENVIRONMENT_NAME
-    if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH'
+    - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH'
       variables:
         _ENV: $CI_ENVIRONMENT_NAME
   environment:
