Add clause to disable deployments when pushing to other branches

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,13 +20,6 @@ deploy:
   image: google/cloud-sdk
   services:
     - docker:dind
-  rules:
-    - if: $CI_COMMIT_BRANCH == "staging"
-      variables:
-        _ENV: staging
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-      variables:
-        _ENV: production
   environment:
     name: $_ENV
     url: https://strapi-$_ENV-5tz4r7de4a-uc.a.run.app
@@ -36,3 +29,11 @@ deploy:
     - gcloud auth activate-service-account --key-file gcloud-service-key.json
     - gcloud config set project $GCP_PROJECT_ID
     - gcloud builds submit . --config=cloudbuild.yaml --substitutions=_ENVIRONMENT=$_ENV
+  rules:
+    - if: $CI_COMMIT_BRANCH == "staging"
+      variables:
+        _ENV: staging
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+      variables:
+        _ENV: production
+    - when: never
