--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,10 @@ include:
   - template: Secret-Detection.gitlab-ci.yml
   - template: Security/SAST.gitlab-ci.yml
 
+cache:
+  paths:
+    - node_modules/
+
 stages:
   - test
   - deploy
