--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,13 +26,12 @@ deploy:
     - docker:dind
   environment:
     name: $_ENV
-    url: https://strapi-$_ENV-5tz4r7de4a-uc.a.run.app
   script:
-    - echo "Deplyoing to $_ENV"
+    - echo "Deplyoing to $CI_ENVIRONMENT_NAME"
     - echo $GCP_SERVICE_KEY > gcloud-service-key.json 
     - gcloud auth activate-service-account --key-file gcloud-service-key.json
     - gcloud config set project $GCP_PROJECT_ID
-    - gcloud builds submit . --config=cloudbuild.yaml --substitutions=_ENVIRONMENT=$_ENV
+    - gcloud builds submit . --config=cloudbuild.yaml --substitutions=_ENVIRONMENT=$CI_ENVIRONMENT_NAME
   rules:
     - if: $CI_COMMIT_BRANCH == "staging"
       variables:
