Added images to relic

--- a/api/relic/models/relic.settings.json
+++ b/api/relic/models/relic.settings.json
@@ -24,6 +24,17 @@
     "description": {
       "type": "richtext",
       "required": true
+    },
+    "images": {
+      "collection": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false,
+      "pluginOptions": {}
     }
   }
 }
