Revert dump confgi changes

--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build ",
-    "dump-config": "strapi config:dump > database-config.json",
     "strapi": "strapi",
     "test": "jest --forceExit --detectOpenHandles"
   },
@@ -46,8 +45,5 @@
     ],
     "testEnvironment": "node"
   },
-  "license": "MIT",
-  "devDependencies": {
-    "wait-on": "^6.0.0"
-  }
+  "license": "MIT"
 }
