--- a/api/relic/models/relic.settings.json
+++ b/api/relic/models/relic.settings.json
@@ -35,6 +35,13 @@
       "plugin": "upload",
       "required": false,
       "pluginOptions": {}
+    },
+    "slug": {
+      "type": "string",
+      "unique": true,
+      "required": true,
+      "maxLength": 4,
+      "minLength": 4
     }
   }
 }
