--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "strapi": "strapi"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@babel/preset-env": "^7.16.11",
     "@jest/globals": "^27.4.4",
+    "babel-jest": "^27.4.6",
     "jest": "^27.4.7",
     "sqlite3": "^5.0.2",
     "supertest": "^6.2.2"
@@ -20,7 +23,9 @@
     "@strapi/plugin-i18n": "4.0.5",
     "@strapi/plugin-users-permissions": "4.0.5",
     "@strapi/strapi": "4.0.5",
-    "axios": "^0.25.0"
+    "axios": "^0.25.0",
+    "dotenv": "^14.2.0",
+    "lodash": "^4.17.21"
   },
   "author": {
     "name": "A Strapi developer"
