--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "strapi": "strapi"
   },
   "devDependencies": {
+    "@babel/cli": "^7.16.8",
     "@babel/core": "^7.16.12",
     "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
     "@jest/globals": "^27.4.4",
     "babel-jest": "^27.4.6",
+    "babel-loader": "^8.2.3",
     "jest": "^27.4.7",
     "sqlite3": "^5.0.2",
     "supertest": "^6.2.2"
