--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "supertest": "^6.2.2"
   },
   "dependencies": {
+    "@strapi/plugin-graphql": "4.0.5",
     "@strapi/plugin-i18n": "4.0.5",
     "@strapi/plugin-users-permissions": "4.0.5",
     "@strapi/strapi": "4.0.5",
