--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "dotenv": "^14.2.0",
     "lodash": "^4.17.21",
     "pg": "^8.7.1",
-    "sharp": "^0.29.3"
+    "sharp": "^0.29.3",
+    "strapi-provider-upload-google-cloud-storage": "^4.0.0"
   },
   "author": {
     "name": "A Strapi developer"
