--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,8 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
+    entrypoint: 'bash'
+    args: ['-c', 'docker pull us-central1-docker.pkg.dev/$PROJECT_ID/strapi:latest || exit 0']
+  - name: 'gcr.io/cloud-builders/docker'
     args: [ 'build', 
           '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/strapi/strapi:latest', 
           '--cache-from', 'us-central1-docker.pkg.dev/$PROJECT_ID/strapi/strapi:latest',
@@ -8,3 +11,4 @@ steps:
     args: [ 'push', 'us-central1-docker.pkg.dev/$PROJECT_ID/strapi/strapi:latest']
   - name: "gcr.io/cloud-builders/gcloud"
     args: ['run', 'deploy', 'strapi-${_ENVIRONMENT}', '--image', 'us-central1-docker.pkg.dev/$PROJECT_ID/strapi/strapi:latest', '--region', 'us-central1', '--platform', 'managed', '--allow-unauthenticated']
+images: ['us-central1-docker.pkg.dev/$PROJECT_ID/strapi:latest']
