--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,4 +11,5 @@ steps:
     args: [ 'push', 'us-central1-docker.pkg.dev/$PROJECT_ID/strapi/strapi:latest']
   - name: "gcr.io/cloud-builders/gcloud"
     args: ['run', 'deploy', 'strapi-${_ENVIRONMENT}', '--image', 'us-central1-docker.pkg.dev/$PROJECT_ID/strapi/strapi:latest', '--region', 'us-central1', '--platform', 'managed', '--allow-unauthenticated']
-images: ['us-central1-docker.pkg.dev/$PROJECT_ID/strapi:latest']
+images: 
+  - 'us-central1-docker.pkg.dev/$PROJECT_ID/strapi:latest'
